...
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.57647058823529407" green="0.58039215686274515" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Calculator" id="Ifu-yz-DXV">
                        <barButtonItem key="rightBarButtonItem" title="Settings" id="UJU-Ra-qVK">
                            <connections>
                                <segue destination="Xnv-Vf-dWR" kind="push" id="Fgj-Dr-p3T"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sjr-GU-FdV">
                                <rect key="frame" x="262" y="141" width="49" height="31"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" hint="switch" identifier="switch" label="switch"/>
                                <connections>
                                    <action selector="toggleSwitch:" destination="Xnv-Vf-dWR" eventType="valueChanged" id="Hq2-uk-oFx"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="     Enable Waits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4q-Tt-0fq">
                                <rect key="frame" x="53" y="118" width="269" height="76"/>
...
